--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@ border-color: black;}
     <div class="one">
     <h2>CONTACT</h2>
 
-    <img src="WhatsApp Image 2022-11-04 at 20.47.24.jpg" alt="my img" width="8%" align="right">
+    <img src="vinayapic.jpg" alt="my img" width="8%" align="right">
 
     <ul>
         <li>NAME:GOTTIMUKKULA VINAYASRI</li>
